# geosetter-lite

./: Makefile  README.md  geosetter_lite.spec  main.py  pyproject.toml
data/: README.md  world_locations.csv
geosetter_lite/: __init__.py  ai_service.py  config.py  exiftool_service.py  file_scanner.py  geocoding_dialog.py  geolocation_dialog.py  image_model.py  main_window.py  map_panel.py  map_widget.py  metadata_editor.py  progress_dialog.py  reverse_geocoding_service.py  settings_dialog.py  table_delegates.py  utils.py
geosetter_lite/core/: __init__.py  config.py
geosetter_lite/models/: __init__.py  image_model.py
geosetter_lite/resources/: README.md  resources.qrc  resources_rc.py
geosetter_lite/services/: __init__.py  ai_service.py  exiftool_service.py  file_scanner.py  jpegtran_lossless.py  location_database.py  reverse_geocoding_service.py
geosetter_lite/ui/: __init__.py  auto_rotate_dialog.py  batch_edit_dialog.py  date_time_shift_dialog.py  directory_toolbar.py  error_dialog.py  geocoding_dialog.py  geolocation_dialog.py  main_window.py  map_panel.py  map_widget.py  metadata_editor.py  quick_edit_dialog.py  rename_dialog.py  rotate_dialog.py  settings_dialog.py  similarity_dialog.py  table_delegates.py
icon/: create-icns.sh  geosetter_lite.icns
scripts/: test_predict_geoloc.py
